# django-mentorship

./: .gitignore  LICENSE  readme.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: block-main.yml  validate-branch-name.yml
Week-01/: main.py  pyproject.toml
Week-01/hello-python/: messy.py  verify_environment.py
Week-02/: Testing.py  context_managers.py  decorators.py  descriptor.py  mini_orm.py  models_simulation.py  pyproject.toml  type_hints.py
Week-03/taskmaster/: db.sqlite3  pyproject.toml
hello-python/: hello.py  main.py  pyproject.toml  verify_environment.py
week-01-environment-setup/: readme.md
week-01-environment-setup/hello-python/: hello.py  pyproject.toml  verify_environment.py
week-02-python-foundations/: readme.md
week-02-python-foundations/python-foundations/: context_managers.py  decorators.py  descriptors.py  main.py  mini_orm.py  models_simulation.py  pyproject.toml  type_hints.py
week-03-django-intro/: readme.md
week-03-django-intro/taskmaster/: .env  db.sqlite3  (+2 more)
week-04-models-basics/: README.md  readme.md
week-05-views-urls/: README.md  readme.md
week-06-templates/: README.md  readme.md
week-07-forms/: README.md  readme.md
week-08-admin/: README.md  readme.md
week-09-authentication/: README.md  readme.md
week-10-rest-api/: README.md  readme.md
week-11-testing/: README.md  readme.md
week-12-advanced-orm/: README.md  readme.md
week-13-caching-performance/: README.md  readme.md
week-14-celery-async/: README.md  readme.md
week-15-deployment/: README.md  readme.md
week-16-capstone/: readme.md
(+29 files in other folders)
